# AoC_2024

./: -.json  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test.sh
include/: parser.hpp  yoda.hpp
include/yeti/: README.md  core.hpp
include/yeti/core/: atom.hpp  blessed.hpp  combinator.hpp  flat_variant.hpp  generics.hpp  lift.hpp  parser.hpp  parser_fn.hpp  parser_lift.hpp  parser_obj.hpp  rebind.hpp  result.hpp  typed.hpp
include/yeti/core/combinate/: desc.hpp  fixed.hpp  impl.hpp  typed.hpp
include/yeti/generic/: range.hpp  trivial.hpp
include/yoda/: combinators.hpp  core.hpp  parsers.hpp
src/: day_1.cpp  day_2.cpp  test_yeti.cpp
